--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Etch A Sketch </title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
+        <link rel="icon" type="image/x-icon" href="favicon-pencil-eraser.png">
+        <title>Etch A Sketch </title>
     </head>
     <body>
         
