Add 'Title', 'Board', 'Menu' & 'Acknowledgements' sections

--- a/index.html
+++ b/index.html
@@ -6,13 +6,32 @@
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
         <link rel="icon" type="image/x-icon" href="favicon-pencil-eraser.png">
-        <title>Etch A Sketch </title>
+        <title>Etch A Sketch</title>
     </head>
     <body>
         
+        <!-- SECTION 1 - TITLE -->
         <header>
             <h1>Etch A Sketch</h1>
         </header>
 
+        <!-- SECTION 2 - SKETCH BOARD -->
+        <main id="board"></main>
+
+        <!-- SECTION 3 - SKETCH MENU -->
+        <ul id="menu">
+            <input id="background-toggle" type="button" value="Light/Dark Mode">
+            <input id="color-wheel" type="button" value="Select">
+            <input type="button" value="Color">
+            <input type="button" value="Rainbow">
+            <input type="button" value="Eraser">
+            <input type="button" value="Clear">
+            <input type="range" min="1" max="64" value="32">
+        </ul>
+
+        <!-- SECTION 4 - ACKNOWLEDGEMENTS -->
+        <footer>
+            <h2>Coded by <a href="https://github.com/jtd-117/etch-a-sketch">jtd-117</a></h2>
+        </footer>
     </body>
 </html>
