Move 'board' & 'menu' inside main tag

--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
             <h1>Etch A Sketch</h1>
         </header>
 
-        <!-- SECTION 2 - SKETCH BOARD -->
-        <main id="board"></main>
+        <!-- SECTION 2 - SKETCH BOARD & MENUS -->
+        <main>
+            <div id="board"></div>
 
-        <!-- SECTION 3 - SKETCH MENU -->
-        <ul id="menu">
-            <input id="background-toggle" type="button" value="Light/Dark Mode">
-            <input id="color-wheel" type="button" value="Select">
-            <input type="button" value="Color">
-            <input type="button" value="Rainbow">
-            <input type="button" value="Eraser">
-            <input type="button" value="Clear">
-            <input type="range" min="1" max="64" value="32">
-        </ul>
+            <ul id="menu">
+                <input id="background-toggle" type="button" value="Light/Dark Mode">
+                <input id="color-wheel" type="button" value="Select">
+                <input type="button" value="Color">
+                <input type="button" value="Rainbow">
+                <input type="button" value="Eraser">
+                <input type="button" value="Clear">
+                <input type="range" min="1" max="64" value="32">
+            </ul>
+        </main>
 
-        <!-- SECTION 4 - ACKNOWLEDGEMENTS -->
+        <!-- SECTION 3 - ACKNOWLEDGEMENTS -->
         <footer>
             <h2>Coded by <a href="https://github.com/jtd-117/etch-a-sketch">jtd-117</a></h2>
         </footer>
