Add 'color' type to 'input' tag in 'menu' section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div id="board"></div>
 
             <ul id="menu">
-                <input id="background-toggle" type="button" value="Light/Dark Mode">
-                <input id="color-wheel" type="button" value="Select">
+                <input type="color">
+                <input type="button" value="Select">
                 <input type="button" value="Color">
                 <input type="button" value="Rainbow">
                 <input type="button" value="Eraser">
