Add 'images' directory

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
             <ul id="menu">
                 <input type="color">
-                <input type="button" value="Select">
-                <input type="button" value="Color">
+                <input type="button" value="Pencil">
                 <input type="button" value="Rainbow">
                 <input type="button" value="Eraser">
-                <input type="button" value="Clear">
+                <input type="button" value="Reset">
                 <input type="range" min="1" max="64" value="32">
             </ul>
         </main>
