Change project name to 'Pixel Sketch'

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
         <link rel="icon" type="image/x-icon" href="favicon-pencil-eraser.png">
-        <title>Etch A Sketch</title>
+        <title>Pixel Sketch</title>
     </head>
     <body>
         
         <!-- SECTION 1 - TITLE -->
         <header>
-            <h1>Etch A Sketch</h1>
+            <h1>Pixel Sketch</h1>
         </header>
 
         <!-- SECTION 2 - SKETCH BOARD & MENUS -->
@@ -25,7 +25,7 @@
                 <input type="button" value="Rainbow">
                 <input type="button" value="Eraser">
                 <input type="button" value="Reset">
-                <input type="range" min="1" max="64" value="32">
+                <input type="range" min="1" max="128" value="32">
             </ul>
         </main>
 
