Add IDs to input tags in 'menu'

--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
             <h1>Pixel Sketch</h1>
         </header>
 
-        <!-- SECTION 2 - SKETCH BOARD & MENUS -->
+        <!-- SECTION 2 - PIXEL BOARD & MENU -->
         <main>
+
+            <!-- SECTION 2A - PIXEL BOARD CONTAINER -->
             <div id="board"></div>
 
+            <!-- SECTION 2B - OPTIONS MENU -->
             <ul id="menu">
-                <input type="color">
-                <input type="button" value="Pencil">
-                <input type="button" value="Rainbow">
-                <input type="button" value="Eraser">
-                <input type="button" value="Reset">
-                <input type="range" min="1" max="128" value="32">
+                <input id="color-picker" type="color">
+                <input id="pencil" type="button" value="Pencil">
+                <input id="rainbow" type="button" value="Rainbow">
+                <input id="eraser" type="button" value="Eraser">
+                <input id="reset" type="button" value="Reset">
+                <input id="pixel-slider" type="range" min="1" max="128" value="64">
             </ul>
         </main>
 
