--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
-        <link rel="icon" type="image/x-icon" href="favicon-pencil-eraser.png">
-        <title>Pixel Sketch</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon-pencil-eraser.png">
+        <title>Pixel Sketcher</title>
     </head>
     <body>
         
         <!-- SECTION 1 - TITLE -->
         <header>
-            <h1>Pixel Sketch</h1>
+            <h1>Pixel Sketcher</h1>
         </header>
 
         <!-- SECTION 2 - PIXEL BOARD & MENU -->
