Reset 'pixel-slider' to max 64 & default 32

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <input id="rainbow" type="button" value="Rainbow">
                 <input id="eraser" type="button" value="Eraser">
                 <input id="reset" type="button" value="Reset">
-                <input id="pixel-slider" type="range" min="1" max="128" value="64">
+                <div id="size">32 X 32</div>
+                <input id="pixel-slider" type="range" min="1" max="64" value="32">
             </ul>
         </main>
 
