--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="board"></div>
 
             <!-- SECTION 2B - OPTIONS MENU -->
-            <ul id="menu">
+            <div id="menu">
                 <input id="color-picker" type="color">
                 <input id="pencil" type="button" value="Pencil">
                 <input id="rainbow" type="button" value="Rainbow">
@@ -30,7 +30,7 @@
                 <input id="reset" type="button" value="Reset">
                 <div id="size">32 X 32</div>
                 <input id="pixel-slider" type="range" min="1" max="64" value="32">
-            </ul>
+            </div>
         </main>
 
         <!-- SECTION 3 - ACKNOWLEDGEMENTS -->
