Change 'Nyan Cat' ID to 'nyan-cat'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="menu">
                 <input id="color-picker" type="color">
                 <input id="pencil" type="button" value="Pencil">
-                <input id="Nyan Cat" type="button" value="Nyan Cat">
+                <input id="nyan-cat" type="button" value="Nyan Cat">
                 <input id="eraser" type="button" value="Eraser">
                 <input id="reset" type="button" value="Reset">
                 <div id="size">32 X 32</div>
