--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input id="nyan-cat" type="button" value="Nyan Cat">
                 <input id="eraser" type="button" value="Eraser">
                 <input id="reset" type="button" value="Reset">
-                <div id="size">32 X 32</div>
+                <div id="size">Dimensions: 32 X 32</div>
                 <input id="pixel-slider" type="range" min="1" max="64" value="32">
             </div>
         </main>
