Change 'color-picker' ID to 'pencil-color'

--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
 
             <!-- SECTION 2B - OPTIONS MENU -->
             <div id="menu">
-                <input id="color-picker" type="color">
+
+                <input id="pencil-color" type="color">
                 <input id="pencil" type="button" value="Pencil">
-                <input id="nyan-cat" type="button" value="Nyan Cat">
+
                 <input id="eraser" type="button" value="Eraser">
                 <input id="reset" type="button" value="Reset">
+                
+                <input id="nyan-cat" type="button" value="Nyan Cat">
+
                 <div id="size">Dimensions: 32 X 32</div>
                 <input id="pixel-slider" type="range" min="1" max="100" value="50">
             </div>
