Add 'grid' option & style subsection

--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
                     <input id="reset" type="button" value="Reset">
                 </div>
 
-                <!-- SECTION 2BIII - Rainbow Mode -->
+                <!-- SECTION 2BIII - Grid Option & Grid Style Container -->
+                <div class="menu-container-2">
+                    <input id="grid-color" type="color">
+                    <input id="grid-toggle" type="button" value="Grid">
+                    <input id="grid-style" type="button" value="Solid">
+                </div>
+
+                <!-- SECTION 2BIV - Rainbow Mode -->
                 <input id="nyan-cat" type="button" value="Nyan Cat">
 
-                <!-- SECTION 2BIV - Dimensions Container -->
+                <!-- SECTION 2BV - Dimensions Container -->
                 <div class="menu-container-3">
-                    <span id="size">Dimensions: 32 X 32</span>
+                    <span id="size">Size: 32 X 32</span>
                     <input id="pixel-slider" type="range" min="1" max="100" value="50">
                 </div>
             </div>
