Remove 'grid-option' button

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <!-- SECTION 2BIII - Grid Option & Grid Style Container -->
                 <div class="menu-container-2">
                     <input id="grid-color" type="color">
-                    <input id="grid-toggle" type="button" value="Grid">
-                    <input id="grid-style" type="button" value="Solid">
+                    <span id="grid-title">Grid:</span>
+                    <input id="grid" type="button" value="Solid">
                 </div>
 
                 <!-- SECTION 2BIV - Rainbow Mode -->
