Change default eraser color to RGB white

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <!-- SECTION 2BII - Eraser & Reset Container -->
                 <div class="menu-container-2">
-                    <input id="eraser-color" type="color">
+                    <input id="eraser-color" type="color" value="#FFFFFF">
                     <input id="eraser" type="button" value="Eraser">
                     <input id="reset" type="button" value="Reset">
                 </div>
