Remove 'grid' as default

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="menu-container-2">
                     <input id="grid-color" type="color">
                     <span id="grid-title">Grid:</span>
-                    <input id="grid" type="button" value="Solid">
+                    <input id="grid" type="button" value="None">
                 </div>
 
                 <!-- SECTION 2BIV - Rainbow Mode -->
