Add sound effect 'audio' tags

--- a/index.html
+++ b/index.html
@@ -59,5 +59,13 @@
         <footer>
             <h2>Coded by <a href="https://github.com/jtd-117/etch-a-sketch">jtd-117</a></h2>
         </footer>
+
+        <!-- SECTION 4 - Sound Effects -->
+        <audio id="pencil-mp3" src="sounds/pencil-sound.mp3"></audio>
+        <audio id="eraser-mp3" src="sounds/eraser-sound.mp3"></audio>
+        <audio id="reset-mp3" src="sounds/reset-sound.mp3"></audio>
+        <audio id="grid-mp3" src="sounds/grid-sound.mp3"></audio>
+        <audio id="nyan-mp3" src="sounds/nyan-cat-sound.mp3"></audio>
+        <audio id="slider-mp3" src="sounds/pixel-slider-sound.mp3"></audio>
     </body>
 </html>
