Change default grid color to hex: #808080

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <!-- SECTION 2BIII - Grid Option & Grid Style Container -->
                 <div class="menu-container-2">
-                    <input id="grid-color" type="color">
+                    <input id="grid-color" type="color" value="#808080">
                     <span id="grid-title">Grid:</span>
                     <input id="grid" type="button" value="None">
                 </div>
