--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
                 <!-- SECTION 2BV - Dimensions Container -->
                 <div class="menu-container-3">
-                    <span id="size">Size: 32 X 32</span>
+                    <span class="menu-text">Size: 32 X 32</span>
                     <input id="pixel-slider" type="range" min="1" max="100" value="50">
                 </div>
 
                 <!-- SECTION 2BVI - Wallpaper Toggle -->
                 <div class="menu-container-3">
-                    <span id="size">Wallpaper:</span>
-                    <input type="button" value="Day">
+                    <span class="menu-text">Wallpaper:</span>
+                    <input id="wallpaper" type="button" value="Day">
                 </div>
             </div>
         </main>
