Add day/night functionality

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <!-- SECTION 2BV - Dimensions Container -->
                 <div class="menu-container-3">
-                    <span class="menu-text">Size: 32 X 32</span>
+                    <span id="size" class="menu-text">Size: 32 X 32</span>
                     <input id="pixel-slider" type="range" min="1" max="100" value="50">
                 </div>
 
