Add morning-toggle-sound.mp3 & night-toggle-sound.mp3 in index.html

--- a/index.html
+++ b/index.html
@@ -73,5 +73,7 @@
         <audio id="grid-mp3" src="sounds/grid-sound.mp3"></audio>
         <audio id="nyan-mp3" src="sounds/nyan-cat-sound.mp3"></audio>
         <audio id="slider-mp3" src="sounds/pixel-slider-sound.mp3"></audio>
+        <audio id="morning-mp3" src="sounds/morning-toggle-sound.mp3"></audio>
+        <audio id="night-mp3" src="sounds/night-toggle-sound.mp3"></audio>
     </body>
 </html>
